# mlproject_template

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
src/models/: train_model.py
