[tool.poetry]
name = "mlproject_template"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
optuna = "^2.10.0"
mlflow = "^1.23.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
